# libvmod-rmq

./: CHANGES.rst  README.md  README.rst  configure.ac
src/: Makefile.am  vmod_rmq.c  vmod_rmq.vcc
src/tests/: test01.vtc
